--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ gems:
   - jekyll-paginate
 
 # Site settings
-title: "Mediator"
+title: "Mediator 한글한글"
 description: > # this means to ignore newlines until "email:"
    A Jekyll theme - Medium inspired
 
