--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
 
 name: 'ppcj2'
 author: 'ppcj2'
-author_image: "/assets/images/author.jpg"
+author_image: "/assets/images/df_logo.jpg"
 
 paginate:	5
 
